Additional refactoring of DTO's